# rika-firenet-api-rs

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  openapi-config.yml  rika-firenet-openapi.yml  shell.nix
.github/: renovate.json5
.github/workflows/: build_and_test.yml
.openapi-generator/: FILES
docs/: StoveApi.md  StoveControls.md  StoveStatus.md  login.http  login_bad_credentials.http  login_no_args.http  logout_no_cookie.http  logout_session_authenticated.http  logout_session_unauthenticated.http  summary_session_destroyed.http
mock/: Dockerfile  package-lock.json  package.json
mock/src/: server.js  stove-status.json  summary.html
rika-firenet-client/: Cargo.toml  build.rs
rika-firenet-client/src/: api_internals.rs  auth.rs  lib.rs  model.rs
rika-firenet-client/tests/: integration_test.rs
rika-firenet-client/tests/resources/: rika_firenet_api_status.json
rika-firenet-openapi/: Cargo.toml  README.md  generate-code.sh  openapi-config.yml  rika-firenet-openapi.yml
rika-firenet-openapi/.openapi-generator/: FILES
rika-firenet-openapi/docs/: AuthApi.md  StoveControls.md  StoveFeatures.md  StoveSensors.md  StoveStatus.md  StovesApi.md
rika-firenet-openapi/src/apis/: auth_api.rs  configuration.rs  mod.rs  stove_api.rs  stoves_api.rs
rika-firenet-openapi/src/models/: stove_controls.rs  stove_features.rs  stove_sensors.rs  stove_status.rs
src/: client.rs  lib.rs
src/apis/: configuration.rs  mod.rs  stove_api.rs
src/models/: mod.rs  stove_controls.rs  stove_features.rs  stove_sensors.rs  stove_status.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/resources/: rika_firenet_web_summary.html
