[package]
name = "rika_firenet"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Rika Firenet API operations"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
lazy_static = "^1.4"
regex = "^1.7"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["cookies", "json", "multipart"]

[dev-dependencies]
httpmock = "0.6"
tokio = "1.25"