[package]
name = "rika-firenet-client"
version = "0.1.0"
authors = ["Jeremie Huchet"]
description = "Rika Firenet API client"
license = "GPL-3.0"
edition = "2021"

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1"
lazy_static = "^1.4"
log = "^0.4"
prometheus = { version = "^0.13" }
regex = "^1.7"
reqwest = { version = "^0.11", features = ["cookies", "json", "multipart"] }
reqwest-middleware = "^0.2"
reqwest-prometheus-middleware = { path = "../../reqwest-prometheus-middleware" }
rika-firenet-openapi = { path = "../rika-firenet-openapi" }
task-local-extensions = "^0.1"

[dev-dependencies]
httpmock = "^0.6"
testcontainers = "^0.14"
tokio = "^1.25"

[build-dependencies]
anyhow = "^1.0"
