[package]
name = "rika-firenet-client"
version = "0.1.0"
authors = ["Jeremie Huchet"]
description = "Rika Firenet API client"
license = "GPL-3.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bon = "3.4"
http = "1.0"
lazy_static = "1.4"
log = "0.4"
nipper = "0.1"
regex = "1.7"
reqwest = { version = "0.12", features = ["cookies", "json", "multipart"] }
reqwest-middleware = "0.4"
rika-firenet-openapi = { path = "../rika-firenet-openapi" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
httpmock = "=0.8.3"
testcontainers = "=0.27.1"
tokio = "=1.49.0"
