[package]
name = "rika-firenet-openapi"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Rika Firenet API operations"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest-middleware = "0.3.0"
[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart"]
