[package]
name = "rika-firenet-openapi"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors"]
description = "Rika Firenet API operations"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
async-trait = "^0.1"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
mockall = { version = "^0.14.0", optional = true}
[features]
mockall = ["dep:mockall"]
